--- a/.classpath
+++ b/.classpath
@@ -8,15 +8,15 @@
 		<attributes>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.5.0_01">
-		<attributes>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/junit-3.8.1.jar">
 		<attributes>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="/prevayler">
+		<attributes>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 		</attributes>
 	</classpathentry>
