--- a/sneer/build.properties
+++ b/sneer/build.properties
@@ -1,4 +1,7 @@
 source.sneer.jar = src/
 output.sneer.jar = bin/
 bin.includes = plugin.xml,\
-               sneer.jar
+               sneer.jar,\
+               lib/prevayler-2.03.000.jar
+src.includes = lib/prevayler-2.03.000.jar
+jars.extra.classpath = lib/prevayler-2.03.000.jar
