removed prevayler project dependency by adding prevayler.jar to lib
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@38 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/build.properties
+++ b/sneer/build.properties
@@ -4,4 +4,4 @@ bin.includes = plugin.xml,\
                sneer.jar,\
                lib/prevayler-2.03.000.jar
 src.includes = lib/prevayler-2.03.000.jar
-jars.extra.classpath = lib/prevayler-2.03.000.jar
+jars.extra.classpath = lib/prevayler-cvs-20050706.jar
