fixed prevayler.jar reference
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@44 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/build.properties
+++ b/sneer/build.properties
@@ -2,6 +2,6 @@ source.sneer.jar = src/
 output.sneer.jar = bin/
 bin.includes = plugin.xml,\
                sneer.jar,\
-               lib/prevayler-2.03.000.jar
-src.includes = lib/prevayler-2.03.000.jar
+               lib/prevayler-cvs-20050706.jar
+src.includes = lib/prevayler-cvs-20050706.jar
 jars.extra.classpath = lib/prevayler-cvs-20050706.jar
