--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/junit-3.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/prevayler-cvs-20050706.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/prevayler-cvs-20050706.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-1.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
