--- a/sneer/build.properties
+++ b/sneer/build.properties
@@ -2,6 +2,7 @@ source.sneer.jar = src/
 output.sneer.jar = bin/
 bin.includes = plugin.xml,\
                sneer.jar,\
-               lib/prevayler-cvs-20050706.jar
+               lib/prevayler-cvs-20050706.jar,\
+               lib/xstream/
 src.includes = lib/prevayler-cvs-20050706.jar
 jars.extra.classpath = lib/prevayler-cvs-20050706.jar
