--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="src/main"/>
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/junit-3.8.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/prevayler-cvs-20050706.jar"/>
 	<classpathentry kind="lib" path="lib/jmock-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/xpp3_min-1.1.3.4.O.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.1.2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/wheel"/>
+	<classpathentry kind="lib" path="lib/prevayler-2.02.006.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
