Silly Eclipse plugin overhead.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@103 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer.ui/build.properties
+++ b/sneer.ui/build.properties
@@ -3,3 +3,4 @@ output.sneer.ui.jar = bin/
 bin.includes = plugin.xml,\
                sneer.ui.jar,\
                icons/
+jars.compile.order = sneer.ui.jar
