git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@104 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/build.properties
+++ b/sneer/build.properties
@@ -2,7 +2,6 @@ source.sneer.jar = src/
 output.sneer.jar = bin/
 bin.includes = plugin.xml,\
                sneer.jar,\
-               lib/prevayler-cvs-20050706.jar,\
-               lib/xstream/
-src.includes = lib/prevayler-cvs-20050706.jar
-jars.extra.classpath = lib/prevayler-cvs-20050706.jar
+               lib/
+src.includes = lib/
+jars.extra.classpath = lib/prevayler-2.02.006.jar
