--- a/sneer.ui/plugin.xml
+++ b/sneer.ui/plugin.xml
@@ -24,11 +24,11 @@
             id="sneer.ui">
       </category>
       <view
-            name="Contacts View"
+            name="Sneer View"
             icon="icons/sample.gif"
             category="sneer.ui"
-            class="sneer.ui.views.ContactsView"
-            id="sneer.ui.views.ContactsView">
+            class="sneer.ui.views.SneerView"
+            id="sneer.ui.views.SneerView">
       </view>
    </extension>
    <extension
@@ -39,7 +39,7 @@
                ratio="0.5"
                relative="org.eclipse.ui.views.TaskList"
                relationship="right"
-               id="sneer.ui.views.ContactsView">
+               id="sneer.ui.viewsSneerView">
          </view>
       </perspectiveExtension>
    </extension>
