Junit added to lib. Dependency from wheel project removed (wheel.jar is used instead).
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@108 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -8,6 +8,6 @@
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/prevayler-2.02.006.jar"/>
 	<classpathentry kind="lib" path="lib/wheel.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wheel"/>
+	<classpathentry kind="lib" path="lib/junit-3.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
