--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="lib/xpp3_min-1.1.3.4.O.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/prevayler-2.02.006.jar"/>
-	<classpathentry kind="lib" path="lib/wheel.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/wheel.jar"/>
 	<classpathentry kind="lib" path="lib/junit-3.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
