plugin.xml configured for generating update site.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@178 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/plugin.xml
+++ b/sneer/plugin.xml
@@ -3,12 +3,24 @@
 <plugin
    id="sneer"
    name="sneer"
-   version="1.0.0">
+   version="0.0.2">
    <requires>
    </requires>
    
    <runtime>
       <library name="sneer.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/wheel.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/prevayler-2.02.006.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/xstream/xstream-1.1.2.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/junit-3.8.1.jar">
          <export name="*"/>
       </library>
 
