--- a/sneer/plugin.xml
+++ b/sneer/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="sneer"
    name="sneer"
-   version="0.0.5">
+   version="0.0.6">
    <requires>
    </requires>
    
@@ -21,6 +21,9 @@
          <export name="*"/>
       </library>
       <library name="lib/junit-3.8.1.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/xpp3_min-1.1.3.4.O.jar">
          <export name="*"/>
       </library>
 
