Eclipse plug-in dependency nonsense.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@208 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/plugin.xml
+++ b/sneer/plugin.xml
@@ -5,13 +5,12 @@
    name="sneer"
    version="0.0.7">
    <requires>
+      <import plugin="wheel_java1.4" export="true"/>
+      <import plugin="wheel_java5" export="true"/>
    </requires>
    
    <runtime>
       <library name="sneer.jar">
-         <export name="*"/>
-      </library>
-      <library name="lib/wheel.jar">
          <export name="*"/>
       </library>
       <library name="lib/prevayler-2.02.006.jar">
