--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -6,8 +6,10 @@
 	<classpathentry kind="lib" path="lib/xpp3_min-1.1.3.4.O.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/prevayler-2.02.006.jar"/>
-	<classpathentry kind="lib" path="lib/junit-3.8.1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wheel_java1.4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wheel_java5"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins">
+		<accessrules>
+			<accessrule kind="accessible" pattern="**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
