--- a/sneer/build.properties
+++ b/sneer/build.properties
@@ -1,11 +1,1 @@
-source.sneer.jar = src/
-output.sneer.jar = bin/
-bin.includes = plugin.xml,\
-               sneer.jar,\
-               lib/
-src.includes = lib/
-jars.extra.classpath = lib/xstream/xstream-1.1.2.jar,\
-                       lib/prevayler-2.02.006.jar,\
-                       lib/xpp3_min-1.1.3.4.O.jar,\
-                       lib/jmock-1.0.1.jar,\
-                       lib/junit-3.8.1.jar
+bin.includes = META-INF/
