Filters library added.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@292 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -11,5 +11,6 @@
 			<accessrule kind="accessible" pattern="**"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/Filters.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
