--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -14,6 +14,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/Filters.jar"/>
 	<classpathentry kind="src" path="bootstrap/src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/crypto"/>
+	<classpathentry kind="lib" path="bootstrap/lib/jce-jdk13-133.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
