--- a/sneer/.settings/org.eclipse.jdt.ui.prefs
+++ b/sneer/.settings/org.eclipse.jdt.ui.prefs
@@ -1,6 +1,5 @@
-#Tue Sep 27 15:34:33 BRT 2005
+#Sun Dec 24 15:50:42 GMT-03:00 2006
 eclipse.preferences.version=1
-internal.default.compliance=default
 org.eclipse.jdt.ui.exception.name=e
 org.eclipse.jdt.ui.gettersetter.use.is=true
 org.eclipse.jdt.ui.javadoc=false
