--- a/sneer/.settings/org.eclipse.jdt.core.prefs
+++ b/sneer/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Wed Apr 25 12:53:35 GMT-03:00 2007
+#Wed May 09 20:24:10 GMT-03:00 2007
 eclipse.preferences.version=1
 org.eclipse.jdt.core.codeComplete.argumentPrefixes=
 org.eclipse.jdt.core.codeComplete.argumentSuffixes=
@@ -64,5 +64,5 @@ org.eclipse.jdt.core.compiler.problem.unusedPrivateMember=warning
 org.eclipse.jdt.core.compiler.problem.varargsArgumentNeedCast=warning
 org.eclipse.jdt.core.compiler.source=1.6
 org.eclipse.jdt.core.compiler.taskCaseSensitive=enabled
-org.eclipse.jdt.core.compiler.taskPriorities=LOW,NORMAL,HIGH
-org.eclipse.jdt.core.compiler.taskTags=Implement,Refactor,Fix
+org.eclipse.jdt.core.compiler.taskPriorities=LOW,NORMAL,HIGH,LOW
+org.eclipse.jdt.core.compiler.taskTags=Implement,Refactor,Fix,Optimize
