--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="lib/Filters.jar"/>
 	<classpathentry kind="lib" path="lib/prevayler-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.2.2.jar"/>
-	<classpathentry kind="lib" path="lib/xpp3_min-1.1.3.4.O.jar"/>
+	<classpathentry kind="lib" path="lib/xstream/xpp3_min-1.1.3.4.O.jar"/>
 	<classpathentry kind="src" path="src_old"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
