git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@741 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xpp3_min-1.1.3.4.O.jar"/>
 	<classpathentry kind="src" path="src_old"/>
+	<classpathentry kind="lib" path="lib/talk.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
