--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -8,6 +8,7 @@
 	<property name="build" location=".\jarBuild"/>
 	<property name="bin" location=".\bin"/>
 	<property name="src" location=".\src"/>
+	<property name="resources" location=".\resources"/>
 	<property name="tmp" location=".\jarTest"/>
 	
 	<target name="dist">
@@ -56,34 +57,6 @@
 			<src path="${src}"/>
 			<include name="sneer/Sneer.java"/>
 		</javac>
-		
-		<!-- Copy translations -->
-		
-		<mkdir dir="${build}\translations"/>
-		<copy todir="${build}\translations" >
-			<fileset dir=".\src\translations" includes="**\*.*"/>
-		</copy>
-		
-		<!-- Copy splash screen -->
-		
-		<mkdir dir="${build}\sneer\kernel\gui\images"/>
-		<copy todir="${build}\sneer\kernel\gui\images">
-			<fileset dir="${src}\sneer\kernel\gui\images" includes="**\*.jpg"/>
-		</copy>
-
-		<!-- Copy traymenu icons -->
-		
-		<mkdir dir="${build}\sneer\kernel\gui\traymenu"/>
-		<copy todir="${build}\sneer\kernel\gui\traymenu">
-			<fileset dir="${src}\sneer\kernel\gui\traymenu" includes="**\*.png"/>
-		</copy>
-		
-		<!-- Copy contact images -->
-		
-		<mkdir dir="${build}\sneer\kernel\gui\contacts\images"/>
-		<copy todir="${build}\sneer\kernel\gui\contacts\images">
-			<fileset dir="${src}\sneer\kernel\gui\contacts\images" includes="**\*.gif"/>
-		</copy>
 			
 		<!-- Create manifest with entry point -->
 
@@ -97,10 +70,7 @@
 		
 		<jar destfile="${bin}\Sneer.jar" basedir="${build}" manifest="${build}\MANIFEST.MF">
 			<include name="**\*.class" />
-			<include name="translations\**\*.*" />
-			<include name="sneer\kernel\gui\images\**\*.jpg" />
-			<include name="sneer\kernel\gui\traymenu\**\*.png" />
-			<include name="sneer\kernel\gui\contacts\images\**\*.gif" />
+			<fileset dir="${resources}"/>
 		</jar>
 		
 		<!-- Cleanup -->
