git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@768 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -75,7 +75,9 @@
 		
 		<jar destfile="${bin}\Sneer-${version}.jar" basedir="${build}" manifest="${build}\MANIFEST.MF">
 			<include name="**\*.class" />
-			<fileset dir="${resources}"/>
+			<fileset dir="${src}">
+				<exclude name = "**\*.java"/>
+			</fileset>
 		</jar>
 		
 		<!-- Cleanup -->
