--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="spikes"/>
-	<classpathentry kind="src" path="apps/scribble/src"/>
+	<classpathentry kind="src" path="apps/scribble"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/prevayler-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.2.2.jar"/>
