--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -3,16 +3,13 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="spikes"/>
 	<classpathentry kind="src" path="apps/scribble/src"/>
-	<classpathentry kind="src" path="apps/filetransfer/src"/>
-	<classpathentry kind="src" path="apps/talk/src"/>
-	<classpathentry kind="src" path="apps/filesharing/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/prevayler-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xpp3_min-1.1.3.4.O.jar"/>
 	<classpathentry kind="lib" path="lib_for_tests/Filters.jar"/>
 	<classpathentry kind="lib" path="lib_for_tests/junit-3.8.1.jar"/>
-	<classpathentry kind="lib" path="apps/talk/lib/talk.jar"/>
+	<classpathentry kind="lib" path="lib/talk.jar"/>
 	<classpathentry kind="src" path="src_old"/>
 	<classpathentry kind="lib" path="lib/compiler-7-ea-b17-02_aug_2007.jar"/>
 	<classpathentry kind="lib" path="lib/jl1.0.jar" sourcepath="C:/workspace/JLayer1.0/src"/>
