--- a/sneer/spikes/spikes/gandhi/classloading/build.xml
+++ b/sneer/spikes/spikes/gandhi/classloading/build.xml
@@ -49,6 +49,9 @@
 		
 		<mkdir dir="${jarDirectory}\spikes\gandhi\classloading"/>
 		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation.class" todir="${jarDirectory}\spikes\gandhi\classloading"/>
+		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation$1.class" todir="${jarDirectory}\spikes\gandhi\classloading"/>
+		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation$2.class" todir="${jarDirectory}\spikes\gandhi\classloading"/>
+		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation$3.class" todir="${jarDirectory}\spikes\gandhi\classloading"/>
 		
 		<!-- Cleanup -->
 		
