classloading spike started...
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1076 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/spikes/spikes/gandhi/classloading/build.xml
+++ b/sneer/spikes/spikes/gandhi/classloading/build.xml
@@ -48,10 +48,16 @@
 		</jar>
 		
 		<mkdir dir="${jarDirectory}\spikes\gandhi\classloading"/>
-		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation.class" todir="${jarDirectory}\spikes\gandhi\classloading"/>
+		<mkdir dir="${jarDirectory}\2\spikes\gandhi\classloading"/>
+		
+		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation.class"   todir="${jarDirectory}\spikes\gandhi\classloading"/>
+		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation.class"   todir="${jarDirectory}\2\spikes\gandhi\classloading"/>
 		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation$1.class" todir="${jarDirectory}\spikes\gandhi\classloading"/>
+		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation$1.class" todir="${jarDirectory}\2\spikes\gandhi\classloading"/>
 		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation$2.class" todir="${jarDirectory}\spikes\gandhi\classloading"/>
+		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation$2.class" todir="${jarDirectory}\2\spikes\gandhi\classloading"/>
 		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation$3.class" todir="${jarDirectory}\spikes\gandhi\classloading"/>
+		<copy file="${compiled}\spikes\gandhi\classloading\ObjectImplementation$3.class" todir="${jarDirectory}\2\spikes\gandhi\classloading"/>
 		
 		<!-- Cleanup -->
 		
