Frozen Bubble - say goodbye to productivity
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1175 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" path="apps/scribble"/>
 	<classpathentry kind="src" path="spikes"/>
 	<classpathentry kind="src" path="apps/addressbook"/>
-	<classpathentry kind="src" path="apps/frozen"/>
+	<classpathentry kind="src" path="apps/frozenbubble"/>
 	<classpathentry kind="lib" path="lib/prevayler-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xpp3_min-1.1.3.4.O.jar"/>
