--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -11,6 +11,12 @@
 	<classpathentry kind="src" path="spikes"/>
 	<classpathentry kind="src" path="apps/addressbook"/>
 	<classpathentry kind="src" path="apps/frozenbubble"/>
+	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" path="bricks/namekeeper/src"/>
+	<classpathentry kind="src" output="bricks/topten/bin" path="bricks/topten/src"/>
+	<classpathentry kind="src" output="bricks/console/bin" path="bricks/console/src"/>
+	<classpathentry kind="src" output="bricks/im/bin" path="bricks/im/src"/>
+	<classpathentry kind="src" path="bricks/p2p/src"/>
 	<classpathentry kind="lib" path="lib/prevayler-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xpp3_min-1.1.3.4.O.jar"/>
@@ -20,6 +26,7 @@
 	<classpathentry kind="lib" path="lib/cindy.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging.jar"/>
 	<classpathentry kind="lib" path="lib/jml-1.0b2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
 	<classpathentry kind="src" path="src_old"/>
 	<classpathentry kind="lib" path="lib/compiler-7-ea-b17-02_aug_2007.jar"/>
 	<classpathentry kind="lib" path="lib/jl1.0.jar" sourcepath="C:/workspace/JLayer1.0/src"/>
