--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,9 @@
 	<classpathentry excluding="java/" kind="src" path="kernel/src"/>
 	<classpathentry kind="src" path="spikes/src"/>
 	<classpathentry kind="src" path="wheel/src"/>
+	<classpathentry kind="src" path="bricks/console/src"/>
+	<classpathentry kind="src" path="bricks/im/src"/>
+	<classpathentry kind="src" path="bricks/topten/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="kernel/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/junit-4.4.jar"/>
