project remaned to sneer_monolith in favor of new sneer project that can be checked out directly from the trunk.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1257 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/.project
+++ b/sneer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sneer</name>
+	<name>sneer_monolith</name>
 	<comment></comment>
 	<projects>
 	</projects>
