- adding compiler brick - small test changes
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1264 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/.classpath
+++ b/.classpath
@@ -6,10 +6,17 @@
 	<classpathentry kind="src" path="bricks/console/src"/>
 	<classpathentry kind="src" path="bricks/im/src"/>
 	<classpathentry kind="src" path="bricks/topten/src"/>
+	<classpathentry kind="src" path="bricks/log/src"/>
+	<classpathentry excluding="sneer/compiler/impl/CompilerImpl.java" kind="src" path="bricks/compiler/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="kernel/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/junit-4.4.jar"/>
 	<classpathentry kind="lib" path="wheel/lib/xstream-1.2.2.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/Filters.jar"/>
+	<classpathentry kind="lib" path="kernel/lib/slf4j-api-1.5.0.jar"/>
+	<classpathentry kind="lib" path="kernel/lib/slf4j-simple-1.5.0.jar"/>
+	<classpathentry kind="lib" path="bricks/compiler/lib/compiler-7-ea-b17-02_aug_2007.jar"/>
+	<classpathentry kind="lib" path="bricks/compiler/lib/commons-jci-javac-1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="bricks/compiler/lib/commons-jci-core-1.1-SNAPSHOT.jar" sourcepath="/commons-jci-core/src/main/java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
