testing loading brick using separate classloaders
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1296 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,10 @@
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="src" path="bricks/deployer/src"/>
 	<classpathentry kind="src" path="bricks/config/src"/>
+	<!--
+	<classpathentry kind="src" output="kernel/test-resources/classloader/brickTwo/bin" path="kernel/test-resources/classloader/brickTwo/src"/>
+	<classpathentry kind="src" output="kernel/test-resources/classloader/brickOne/bin" path="kernel/test-resources/classloader/brickOne/src"/>
+	-->
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="kernel/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/junit-4.4.jar"/>
