--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,7 @@
 	<classpathentry kind="src" path="bricks/config/src"/>
 	<classpathentry kind="src" path="bricks/contacts/src"/>
 	<classpathentry kind="src" path="bricks/network/src"/>
+	<classpathentry kind="src" path="bricks/mesh"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="kernel/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/junit-4.4.jar"/>
