--- a/.classpath
+++ b/.classpath
@@ -12,6 +12,8 @@
 	<classpathentry kind="src" path="bricks/mesh/src"/>
 	<classpathentry kind="src" path="bricks/connection/src"/>
 	<classpathentry kind="src" path="bricks/exceptionhandler/src"/>
+	<classpathentry kind="src" path="bricks/clock/src"/>
+	<classpathentry kind="src" path="bricks/network/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="kernel/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/junit-4.4.jar"/>
