implementing SocketAccepter using code from ConnectionManager
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1357 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/.classpath
+++ b/.classpath
@@ -28,6 +28,7 @@
 	<classpathentry kind="lib" path="kernel/lib/commons-configuration-1.5.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/commons-collections-3.2.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/commons-logging-api-1.1.jar"/>
+	<classpathentry kind="lib" path="spikes/lib/mina-core-2.0.0-M1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
