--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="java/" kind="src" path="kernel/src"/>
+	<classpathentry kind="src" path="bricks/monitor/src"/>
 	<classpathentry kind="src" path="spikes/src"/>
 	<classpathentry kind="src" path="wheel/src"/>
 	<classpathentry kind="src" path="tests"/>
@@ -11,7 +12,6 @@
 	<classpathentry kind="src" path="bricks/contacts/src"/>
 	<classpathentry kind="src" path="bricks/mesh/src"/>
 	<classpathentry kind="src" path="bricks/connection/src"/>
-	<classpathentry kind="src" path="bricks/exceptionhandler/src"/>
 	<classpathentry kind="src" path="bricks/clock/src"/>
 	<classpathentry kind="src" path="bricks/network/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
