--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="java/" kind="src" path="kernel/src"/>
-	<classpathentry kind="src" path="bricks/monitor/src"/>
 	<classpathentry kind="src" path="spikes/src"/>
 	<classpathentry kind="src" path="wheel/src"/>
 	<classpathentry kind="src" path="tests"/>
@@ -14,6 +13,7 @@
 	<classpathentry kind="src" path="bricks/connection/src"/>
 	<classpathentry kind="src" path="bricks/clock/src"/>
 	<classpathentry kind="src" path="bricks/network/src"/>
+	<classpathentry kind="src" path="bricks/blinkinglights/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="kernel/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/junit-4.4.jar"/>
