git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1445 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="spikes/src"/>
 	<classpathentry kind="src" path="wheel/src"/>
 	<classpathentry kind="src" path="bricks/src"/>
-	<classpathentry kind="src" path="tests"/>
+	<classpathentry excluding="functional/freedom7/test-resources/bricks/sneer/bricks/sample/|functional/freedom7/test-resources/bricks/sneer/bricks/sample/|functional/freedom7/test-resources/bricks/sample/|functional/freedom7/test-resources/bricks/sample/" kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="kernel/lib/junit-4.4.jar"/>
 	<classpathentry kind="lib" path="wheel/lib/xstream-1.2.2.jar"/>
