Cleanup: Output to Console during Test Execution - Leave off by default. Tests should run clean. Turn on when needed only.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1485 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,7 @@
 	<classpathentry kind="lib" path="bricks/lib/commons-logging-api-1.1.jar"/>
 	<classpathentry kind="lib" path="bricks/lib/compiler-7-ea-b17-02_aug_2007.jar"/>
 	<classpathentry kind="lib" path="bricks/lib/slf4j-api-1.5.0.jar"/>
-	<classpathentry kind="lib" path="bricks/lib/slf4j-simple-1.5.0.jar"/>
+	<classpathentry kind="lib" path="bricks/lib/slf4j-log4j12-1.5.0.jar"/>
+	<classpathentry kind="lib" path="bricks/lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
