--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="bricks/lib/slf4j-api-1.5.0.jar"/>
 	<classpathentry kind="lib" path="bricks/lib/slf4j-log4j12-1.5.0.jar"/>
 	<classpathentry kind="lib" path="bricks/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="kernel/lib/asm-3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
