Lucene spike started.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1753 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,7 @@
 	<classpathentry kind="lib" path="kernel/lib/asm-all-3.1.jar"/>
 	<classpathentry kind="lib" path="bricks/lib/bcprov-jdk16-139.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/napkinlaf.jar"/>
+	<classpathentry kind="lib" path="bricks/src/sneer/bricks/lucene/lib/lucene-core-2.3.2.jar"/>
+	<classpathentry kind="lib" path="spikes/lib/lucene-demos-2.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
