--- a/.classpath
+++ b/.classpath
@@ -23,8 +23,9 @@
 	<classpathentry kind="lib" path="bricks/lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/asm-all-3.1.jar"/>
 	<classpathentry kind="lib" path="bricks/lib/bcprov-jdk16-139.jar"/>
-	<classpathentry kind="lib" path="spikes/lib/napkinlaf.jar"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/bricks/lucene/lib/lucene-core-2.3.2.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/lucene-demos-2.3.2.jar"/>
+	<classpathentry kind="lib" path="bricks/lib/napkinlaf.jar"/>
+	<classpathentry kind="lib" path="bricks/lib/swingx-0.9.3.jar" sourcepath="/swingx"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
