--- a/.classpath
+++ b/.classpath
@@ -25,8 +25,8 @@
 	<classpathentry kind="lib" path="bricks/lib/bcprov-jdk16-139.jar"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/bricks/lucene/lib/lucene-core-2.3.2.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/lucene-demos-2.3.2.jar"/>
-	<classpathentry kind="lib" path="bricks/lib/swingx-0.9.3.jar" sourcepath="/swingx"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/skin/laf/napkin/lib/napkinlaf.jar"/>
 	<classpathentry kind="lib" path="bricks/src/sneer/skin/sustance/lib/substance.jar"/>
+	<classpathentry kind="lib" path="bricks/lib/swingx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
