creating a src directory for snapps
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1836 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="java/" kind="src" output="sneerAPI-bin" path="kernel/src"/>
+	<classpathentry kind="src" path="snapps/src"/>
 	<classpathentry kind="src" path="spikes/src"/>
 	<classpathentry kind="src" output="sneerAPI-bin" path="wheel/src"/>
 	<classpathentry kind="src" path="bricks/src"/>
